[gd_scene load_steps=6 format=3 uid="uid://clahvsuaqawm"]

[ext_resource type="Script" path="res://Scripts/collect.gd" id="2_5ic0p"]
[ext_resource type="Script" path="res://Scripts/entity_type.gd" id="2_sebyy"]
[ext_resource type="Texture2D" uid="uid://cnos8wwxp0kyf" path="res://Textures/Tilemaps/DungeonCave/Items.png" id="3_urap1"]
[ext_resource type="Script" path="res://Scripts/gold_stats.gd" id="4_f36bq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcaiq"]
size = Vector2(14, 14)

[node name="Area2D" type="Area2D"]
script = ExtResource("2_5ic0p")

[node name="MediumGold" type="Node2D" parent="."]
script = ExtResource("2_sebyy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_urap1")
region_enabled = true
region_rect = Rect2(80, 128, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tcaiq")

[node name="GoldStats" type="Node2D" parent="."]
script = ExtResource("4_f36bq")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
