[gd_scene load_steps=6 format=3 uid="uid://08gfld036p5a"]

[ext_resource type="Script" path="res://Scripts/collect.gd" id="1_o8i2x"]
[ext_resource type="Texture2D" uid="uid://cnos8wwxp0kyf" path="res://Textures/Tilemaps/DungeonCave/Items.png" id="2_kqjj3"]
[ext_resource type="Script" path="res://Scripts/entity_type.gd" id="2_t42gk"]
[ext_resource type="Script" path="res://Scripts/potion_stats.gd" id="4_vaso2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgu2b"]
size = Vector2(14, 14)

[node name="Area2D" type="Area2D"]
script = ExtResource("1_o8i2x")

[node name="RedPotion" type="Node2D" parent="."]
script = ExtResource("2_t42gk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_kqjj3")
region_enabled = true
region_rect = Rect2(80, 16, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xgu2b")

[node name="PotionStats" type="Node2D" parent="."]
script = ExtResource("4_vaso2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
